[package]
name = "process_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platforms = "3.4.0"  # Try the latest compatible version for heim
async-std = { version = "1.13.0", features = ["attributes"] }
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
crossterm = "0.28.1"
num_cpus = "1.16.0"
futures = "0.3"
sysinfo = "0.32.0"

